created app modular

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,5 +9,14 @@
     "background": {
       "service_worker": "background.js"
     },
-    "permissions": []
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "js":   ["content.js"]
+      }
+    ],
+    "permissions": [
+      "storage",
+      "activeTab"
+    ]
   }
